--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, molestias ullam. Totam iusto, unde id blanditiis
         quod ipsam aspernatur tempore.</p>
 
-    
+    <p>Hola</p>
 </body>
 
 </html>
